--- a/Content-Marketing-Solutions.html
+++ b/Content-Marketing-Solutions.html
@@ -2,10 +2,10 @@
 <html dir="ltr" lang="en-US">
 
 <head>    
-        <title>Content Marketing Solutions | Leadsherpa</title>	
+        <title>Content Marketing Solutions | Worldbridge</title>	
         
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-        <meta name="author" content="Leadsherpa" />
+        <meta name="author" content="Worldbridge" />
         <link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/ >
 
         <!-- Stylesheets
@@ -381,7 +381,7 @@
 				<div class="container clearfix">
                                         <div class="col_full col_last tright">
                                             <div class="fright clearfix">
-                                                <a href="https://twitter.com/leadsherpa" class="social-icon si-small si-borderless nobottommargin si-twitter" target="_blank">
+                                                <a href="https://twitter.com/worldbridge" class="social-icon si-small si-borderless nobottommargin si-twitter" target="_blank">
                                                     <i class="icon-twitter"></i>
                                                     <i class="icon-twitter"></i>
                                                 </a>
@@ -392,7 +392,7 @@
                                             </div>
                                         </div> 
 					<div class="col_half">
-						&copy; 2018 Leadsherpa, a division of Worldbridge Solutions Inc.<br>
+						&copy; 2018 Worldbridge, a division of Worldbridge Solutions Inc.<br>
 						
 					</div>
 
