--- a/contact.html
+++ b/contact.html
@@ -126,10 +126,12 @@
 							<div class="promo promo-dark promo-flat promo-mini promo-center">
 								<h3><span>Corporate Headquarters:</span></h3>
                                                                 <h3>
-                                                                   
-                                                                    #340 S Lemon Ave 9632<br>
+                                                                   28 Old Rudnick LN
 
-                                                                    Walnut, CA 91789
+
+                                                                    <br>
+
+                                                                    Dover, DE 19901
                                                                 </h3>								
 							</div>
 						</div>
