--- a/Lead-Qualification.html
+++ b/Lead-Qualification.html
@@ -310,7 +310,7 @@
 				<div class="container clearfix">
                                         
 					<div class="col_half">
-						&copy; 2018 Worldbridge, a division of Worldbridge Solutions Inc.<br>
+						&copy; 2018 Worldbridge Solutions Inc.<br>
 						
 					</div>
 
