--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 				<div class="container clearfix">
                                         
 					<div class="col_half">
-						&copy; 2019 Worldbridge Solutions Inc.<br>
+                                            &copy; <span id="yr"></span> Worldbridge Solutions Inc.<br>
 						
 					</div>
 
@@ -436,4 +436,10 @@
   ga('send', 'pageview');
 
 </script>
+
+<script>
+    var yr = document.getElementById("yr");
+    var d = new Date();
+    yr.textContent = d.getFullYear();
+    </script>
 </html>
