--- a/Targeted-B2B-Data.html
+++ b/Targeted-B2B-Data.html
@@ -418,7 +418,7 @@
 
 					<div class="col_half col_last tright">
 						<div class="copyrights-menu copyright-links clearfix">
-							<a href="index.html">Home</a>/<a href="about.html">About Us</a>/<a href="contact.html">Contact</a>
+							<a href="index.html">Home</a>/<a href="about.html">About Us</a>/<a href="contact.html">Contact</a>/<a href="https://worldbridgesolutions-my.sharepoint.com/:w:/g/personal/john_pinto_worldbridgeonline_com/EZpTQcwk66NAq0E1Oj119wkBpm2yX3UztiMj54xYdM1nXQ?e=a50jFT">Privacy Policy</a>
 						</div>
 					</div>
 
